Add Liferay 6.2 note and update portlet documentation

--- a/documentation/portal/portal-liferay.asciidoc
+++ b/documentation/portal/portal-liferay.asciidoc
@@ -29,7 +29,7 @@ to use the same Vaadin version and resources. If using this approach, you can
 install the shared resources as described in <<portal.liferay.install>>.
 
 At the time of writing, the latest Liferay release 6.2 is bundled with a version
-of Vaadin release 6. If you want to use Vaadin 7 portlets with shared resources,
+of Vaadin release 6. If you want to use Vaadin 8 portlets with shared resources,
 you first need to remove the old ones as described in <<portal.liferay.remove>>.
 
 [[portal.liferay.profile]]
@@ -119,6 +119,10 @@ Creation of Vaadin a Maven project is described in
 Vaadin with Maven">>. For a Liferay project, you should use the
 [literal]#++vaadin-archetype-liferay-portlet++#.
 
+Note: For creating Liferay 6.2 projects for Vaadin Framework 8.1, use the 8.0
+version of the archetype and then update the dependency versions for Vaadin
+Framework.
+
 [[portal.liferay.project.archetype-parameters]]
 === Archetype Parameters
 
@@ -165,9 +169,8 @@ long as you have a single portlet, but causes a problem if you have multiple
 portlets. To solve this, Vaadin portlets need to use a globally installed widget
 set, theme, and Vaadin libraries.
 
-__Liferay 6.2, which is the latest Liferay version at the time of publication of
-this book, comes bundled with an older Vaadin 6 version. If you want to use
-Vaadin 7, you need to remove the bundled version and install the newer one
+__Liferay 6.2 comes bundled with an older Vaadin 6 version. If you want to use
+Vaadin 8, you need to remove the bundled version and install the newer one
 manually as described in this chapter.__
 
 In these instructions, we assume that you use Liferay bundled with Apache
@@ -219,19 +222,19 @@ copy their contents to [filename]#tomcat-x.x.x/webapps/ROOT/html/VAADIN#.
 +
 [subs="normal"]
 ----
-[prompt]#$# [command]#unzip# path-to/vaadin-server-7.1.0.jar 'VAADIN/*'
+[prompt]#$# [command]#unzip# path-to/vaadin-server-8.1.0.jar 'VAADIN/*'
 ----
 
 +
 [subs="normal"]
 ----
-[prompt]#$# [command]#unzip# path-to/vaadin-themes-7.1.0.jar 'VAADIN/*'
+[prompt]#$# [command]#unzip# path-to/vaadin-themes-8.1.0.jar 'VAADIN/*'
 ----
 
 +
 [subs="normal"]
 ----
-[prompt]#$# [command]#unzip# path-to/vaadin-client-compiled-7.1.0.jar 'VAADIN/*'
+[prompt]#$# [command]#unzip# path-to/vaadin-client-compiled-8.1.0.jar 'VAADIN/*'
 ----
 
 
@@ -253,7 +256,7 @@ vaadin.widgetset=com.vaadin.server.DefaultWidgetSet
 
 # Theme to use
 # This is the default theme if nothing is specified
-vaadin.theme=reindeer
+vaadin.theme=valo
 ----
 
 The allowed parameters are:
@@ -267,7 +270,7 @@ application server; in Liferay with Tomcat it would be located at
 notation. If the parameter is not given, the default widget set is used.
 
 [parameter]#vaadin.theme#:: Name of the theme to use. If the parameter is not given, the default theme is
-used, which is [literal]#++reindeer++#.
+used, which is [literal]#++valo++#.
 
 
 
