--- a/documentation/tutorial.adoc
+++ b/documentation/tutorial.adoc
@@ -534,9 +534,7 @@ The following screencast will show you how to produce the
 _CustomerFormDesign.html_, a design file we need in this tutorial. Use pause and
 slow motion to follow better what is being done in the video. Feel free to get creative!
 
-WARNING: This video is built with Designer 1.0. There are some small differences if you use the latest version.
-
-video::B5dN69NSS78[youtube, width="640", height="400"]
+video::zLE2YfLB1MM[youtube, width="640", height="400"]
 
 TIP: At any point of the process, you can also switch to the markup mode where
 you can edit the raw content of the .html file. If you wish to take a shortcut
